--- a/_includes/support_promo_box.html
+++ b/_includes/support_promo_box.html
@@ -1,7 +1,7 @@
 {% if page.support_promo_box %}
-  <a id="support-promo-section" href="https://github.com/sponsors/daattali" target="_blank">
-    <strong>If you find my open source projects useful, please consider supporting my work.</strong>
-    Without your support I won't be able to continue.<br/>
+  <a id="support-promo-section" href="https://github.com/sponsors/coastalartificialintelligence" target="_blank">
+    <strong>If you find our open source projects useful, please consider supporting our work.</strong>
+   <br/>
     <span class="btn btn-cta btn-lg">
       ❤ Support
     </span>
