--- a/_includes/support_promo_box.html
+++ b/_includes/support_promo_box.html
@@ -1,4 +1,4 @@
-{% if page.support_promo_box %}
+<!-- {% if page.support_promo_box %}
   <a id="support-promo-section" href="https://github.com/sponsors/coastalartificialintelligence" target="_blank">
     <strong>If you find our open source projects useful, please consider supporting our work.</strong>
    <br/>
@@ -7,3 +7,4 @@
     </span>
   </a>
 {% endif %}
+-->
