--- a/_includes/scroll-box.html
+++ b/_includes/scroll-box.html
@@ -2,10 +2,10 @@
   <div id="scroll-box-close">&times;</div>
   <div id="scroll-box-hire">
     Need Shiny help?
-    <a href="/shiny">Hire me</a>
+    <a href="/shiny">Hire Us</a>
   </div>
   <hr/>
   <div id="scroll-box-support">
-    Or <a href="https://github.com/sponsors/daattali">support my work</a> ❤️
+    Or <a href="https://github.com/sponsors/coastalaighana">support my work</a> ❤️
   </div>
 </div>
