--- a/_includes/footer-subscribe.html
+++ b/_includes/footer-subscribe.html
@@ -1,4 +1,4 @@
-        <div id="mailchimp-subscribe-section-footer" class="mailchimp-subscribe-section">
+<!--          <div id="mailchimp-subscribe-section-footer" class="mailchimp-subscribe-section">
         <div id="mc_embed_signup-footer">
           <form action="//deanattali.us14.list-manage.com/subscribe/post?u=a579a88c8f09f9b8502b9d0c3&amp;id=c180f5773c" method="post" id="mc-embedded-subscribe-form-footer" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll-footer">
@@ -16,4 +16,4 @@
             </div>
           </form>
         </div>
-        </div>
+        </div> -->
