--- a/_includes/carbonads.html
+++ b/_includes/carbonads.html
@@ -1,4 +1,4 @@
-{% if page.carbonads %}
+<!-- {% if page.carbonads %}
   {% if page.carbonads-sm-horizontal %}
     <div id="deancarbonads" class="sm-horizontal">
       <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CKYIL5Q7&placement=deanattalicom" id="_carbonads_js"></script>
@@ -8,4 +8,4 @@
       <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CKYIL5Q7&placement=deanattalicom" id="_carbonads_js"></script>
     </div>
   {% endif %}
-{% endif %}
+{% endif %}   -->
